flushing out bonus

--- a/gas_flux_R/gas_flux.html
+++ b/gas_flux_R/gas_flux.html
@@ -200,8 +200,8 @@ pre code {
 <h2>Greenhouse gases</h2>
 </div>
 </div>
-<div id="what-the-flux" class="section level1">
-<h1>What the flux?</h1>
+<div id="flux" class="section level1">
+<h1>Flux</h1>
 <p>Gases are always moving, flowing from high areas of high concentrations to lower concentrations. We describe the net movement of something out of a system as ‘flux’. Remember from our intro unit that you can draw the bounds of a system anywhere. We could calculate flux of anything out (or in) of anything! Flux of calcium out of a watershed (called ‘solute export’), the flux of students out of a classroom, or the flux of gas from the surface of a river.</p>
 <div id="how-to-estimate-gas-flux" class="section level2">
 <h2>How to estimate gas flux</h2>
@@ -243,7 +243,7 @@ pre code {
 <h2>Q0:</h2>
 <p>Just like last time, let’s make sure R knows where we are working. Call ‘here()’ to check.</p>
 <pre class="r"><code>here()</code></pre>
-<pre><code>## [1] &quot;C:/Users/gubbins/Documents/WR-418-assignments/gas_flux_R&quot;</code></pre>
+<pre><code>## [1] &quot;C:/Users/gubbi/Dropbox/My PC (DESKTOP-RMMTJHU)/Documents/WR 418/WR-418-assignments/gas_flux_R&quot;</code></pre>
 </div>
 <div id="q1" class="section level2">
 <h2>Q1</h2>
