citing ssb data

--- a/gas_flux_R/gas_flux_key.html
+++ b/gas_flux_R/gas_flux_key.html
@@ -197,6 +197,7 @@ pre code {
 Profiles of dissolved methane and caron dioxide concentrations at South Sparkling Bog in Woodruff, WI on 1/9/2020. Note how gradients form with depth due to biological processes.
 </p>
 </div>
+<p>Gorsky, A.L., H.A. Dugan, and N.A. Lottig. 2021. Snow Manipulation Greenhouse Gas Measurements at South Sparkling and Trout Bog 2020-2021 ver 1. Environmental Data Initiative. <a href="https://doi.org/10.6073/pasta/661201fc3172c062bdc46010047031d5" class="uri">https://doi.org/10.6073/pasta/661201fc3172c062bdc46010047031d5</a>. Accessed 2022-02-18.</p>
 <div id="oxygen" class="section level2">
 <h2>Oxygen</h2>
 <p>The aquatic gas with the most historical interest, oxygen represents a key indicator of aquatic health. Loading in some data from the South Platte via the USGS, we can see that it cycles with season and time of day.</p>
